--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 #imagem_fundo{
-    background: url(Img/fundo.jpg);
+    background: url(fundo.jpg);
     height: 100%;
     text-align: center;
     background-size: cover;
